# canary

./: .flake8  .flux-ci.toml  .gitignore  .gitlab-ci.yml  .namemap  .readthedocs.yaml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  Dockerfile  LICENSE.md  README.md  examples  pre-commit  pyproject.toml  setup.cfg  test-conf.toml
.github/workflows/: docker-image.yml  publish.yml  py-build.yml  workflow.yml
docker/: Dockerfile  README.md  entrypoint.sh
docker/flux/: Dockerfile  test.sh
docker/pbs/: README.md  test.sh
docker/slurm/: Dockerfile  entrypoint.sh  test.sh
docker/standalone/: Dockerfile  Dockerfile.canary  test.sh
docs/: .gitignore  Makefile
docs/design/: session-demo.md  spec-case.md  workspace-cmd-spec.md
docs/source/: conf.py  config.rst  examples  getting_started.rst  index.rst  installing.rst  requirements.txt  session.rst  test_file.rst  tutorial.rst  writing_tests.rst
docs/source/.cache/: 007cc2921b7c7a4  007f9f2cb18f56e  01172cfe1d53a12  016c2d44b54dcb8  01b2aac34939b45  02c65328010d142  02c7e264b508086  03c2d99e4b95bc4  048379fcd960b28  0534dabbb130618  059783a1eeaedd5  0972b78ec314b74  0b0d9c197db94d7  0b243983fbdd021  0cf0f6af74cc895  0e934bc629379b3  1271e743671656b  14447fa272b3f48  14b8de598746dd8  15e123ef20ae8ee  162880e5f005239  1648a23537dafdf  174b87a9aa17473  1757cbccda9b002  1761db110734683  18ae6e7209383e1  1974187e15d1e58  198c939dc9df91c  1a2ef52319b02be  1b3152a546701f2  1b9c8d3dcff7ace  1ec553da681ac85  1ece233c73be153  2057e3aa32eafdf  21ca46d7fa1899e  22aa77d03bde30f  22b1543ad6ecd26  24b7c6a36522a75  28cc87c87c6b01b  2c2fa594e3d2302  (+171 more)
examples/: tests.json
examples/analyze_only/: analyze_only.pyt
examples/basic/: add.py  first.pyt  second.pyt
examples/centered_space/: centered_space.pyt
examples/copy_and_link/: copy_and_link.pyt  test.pyt
examples/enable/: enable.pyt
examples/execute_and_analyze/: execute_and_analyze.pyt
examples/parameterize/: parameterize1.pyt  parameterize2.pyt  parameterize3.pyt  parameterize4.pyt  test1.pyt
examples/resources/: resources.pyt
examples/run_from_file/: test.pyt
examples/staged/: staged.pyt
examples/status/: diff.pyt  fail.pyt  pass.pyt  skip.pyt  timeout.pyt
examples/timeoutx/: test.pyt  timeout.pyt
examples/vvt/: test_exec_dir.vvt
examples/xstatus/: xdiff-fail.pyt  xdiff.pyt  xfail-code.pyt  xfail-fail.pyt  xfail.pyt
plugins/: nvtest_blacklist.py  nvtest_coverage.py  nvtest_runtimes.py
scripts/: dev-env.sh  mkdocs  nv.test  nvtest  pre-commit
src/_canary/: __init__.py  atc.py  build.py  collect.py  conductor.py  database.py  enums.py  error.py  executor.py  expression.py  filter.py  finder.py  generate.py  generator.py  hookspec.py  ir.py  job.py  job_queue.py  jobspec.py  launcher.py  main.py  mask.py  paramset.py  partition.py  plugin.py  pluginmanager.py  process_pool.py  protocols.py  queue.py  queue_executor.py  queues.py  repo.py  reporter.py  rerun.py  resolve_dependency.py  rules.py  runners.py  runtest.py  select.py  session.py  (+13 more)
src/_nvtest/: __init__.py  atc.py  command.py  database.py  environment.py  error.py  executor.py  expression.py  finder.py  generator.py  hpc_scheduler.py  index.py  main.py  parameter_set.py  paramset.py  partition.py  paths.py  plugin.py  queues.py  reporter.py  resource.py  resources.py  runners.py  schemas.py  session.py  status.py  version.py  when.py
src/canary/: __init__.py  __main__.py  directives.py  patterns.py
src/canary_amd/: __init__.py
src/canary_batch/: __init__.py  argparsing.py  partitioning.py  queue.py  runtests.py  schedulers.py  subprocess.py  testbatch.py
src/canary_cmake/: COPYRIGHT  README.md  __init__.py  ctest.py  plugin.py
src/canary_dist/: __init__.py  adapter.py  batchexec.py  batchspec.py  conductor.py  executor.py  queue.py  status.py
src/canary_flux/: __init__.py  conductor.py  flux_alloc.py
src/canary_gitlab/: __init__.py  gitlab.py  reporter.py
src/canary_gpu/: __init__.py
src/canary_hpc/: COPYRIGHT  README.md  __init__.py  argparsing.py  backend.py  batchexec.py  batching.py  batchjob.py  batchopts.py  batchspec.py  binpack.py  conductor.py  executor.py  partitioning.py  queue.py  runtests.py  schedulers.py  status.py  testbatch.py
src/canary_junit/: __init__.py  reporter.py
src/canary_nvidia/: __init__.py
src/canary_pyt/: __init__.py  pyt.py
src/canary_vvtest/: COPYRIGHT  README.md  __init__.py  generator.py  scalar.py  vvt.py
src/nvtest/: __init__.py  __main__.py  directives.py  patterns.py
tests/: backward.py  batched.py  command.py  conftest.py  database.py  directives.py  environ.py  examples.py  finder.py  generator.py  instance.py  ir.py  job.py  jobspec.py  paramset.py  parsing.py  partition.py  pathspec.py  pytest.ini  report.py  reporter.py  resource_pool.py  resource_schema.py  session.py  spec.py  status.py  testgen.py  timekeeper.py  when.py  workspace.py
tests/1/: a.pyt
tests/basic/: centered_space.pyt  multi.pyt  test_1.pyt  test_2.pyt
tests/cmake/: CTestTestfile.cmake  ctest.py  ctest_parser.py  integration.py  subproject_labels.py
tests/command/: config.py  describe.py  find.py  location.py  report.py  status.py
tests/data/: empire.pyt  empire.vvt
tests/directives/: analyze.py  baseline.py  copy_directive.py  depends_on.py  enable.py  keywords.py  parameterize.py  skipif.py  stages.py  t_copy.py  t_link.py  timeout.py  xdiff.py  xfail.py
tests/environ/: source_rcfile.py
tests/examples/: tests.py
tests/howto/: batched_runs.py  centered_parameter_space.py  cmake_integration.py  execute_and_analyze.py  filter.py  finding.py  howto_000_finding.py  howto_001_run_basic.py  howto_002_run_file.py  howto_010_cmake_integration.py  howto_021_md.py  parameterize.py  running.py
tests/issues/: issue-20-1.vvt
tests/resource_pool/: gpu_select.py  rpool.py
tests/unit/: finder.py
tests/util/: _difflib.py  conditional.py  field.py  graph.py  json_helper.py  names_tests.py  reducer.py  string_tests.py  test_gitlab_zip.py  time_tests.py
tests/vvt/: include.py  parse.py
tools/: NVTest.cmake  nvtest.cmake  pre-commit
(+1589 files in other folders)
