[project]
name = "nvtest"
dynamic = ["version"]
readme = "README.md"
license = {"file" = "LICENSE"}
description = "nvtest: application testing with Python"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
nvtest = "nvtest:console_main"

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "sphinx"]
requests = ["requests"]

[build-system]
requires = ["setuptools>=64", "setuptools-scm[toml]>=6.2.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/_nvtest/_version.py"
version_scheme = "python-simplified-semver"
local_scheme = "no-local-version"

[tool.mypy]
exclude = [
    "src/_nvtest/third_party/distro.py",
    "src/_nvtest/third_party/programoutput/*",
    "src/_nvtest/third_party/monkeypatch.py",
    "src/_nvtest/third_party/cloudpickle.py",
    "src/_nvtest/third_party/docstring_parser/*",
]

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "networkx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ruamel.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pygments.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "toml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "contextlib2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "contextlib2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyinstrument.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "imageio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pkg_resources.*"
ignore_missing_imports = true

# check-wheel-contents is executed by the build-and-inspect-python-package action.
[tool.check-wheel-contents]
# W009: Wheel contains multiple toplevel library entries
ignore = "W009"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint]
ignore = ["E741", "F841", "E731"]
select = ["F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/nvtest/__init__.py" = ["F401"]
"src/_nvtest/abc/__init__.py" = ["F401"]
"src/_nvtest/command/__init__.py" = ["F401"]
"src/_nvtest/third_party/*.py" = ["F401", "F403", "F405"]
