[project]
name = "canary-wm"
dynamic = ["version"]
readme = "README.md"
license = {"file" = "LICENSE"}
description = "canary: application testing with Python"
requires-python = ">=3.10"
dependencies = [
  "PyYAML",
  "psutil",
  "pluggy",
  "hpc-connect @ git+ssh://git@cee-gitlab.sandia.gov/ascic-test-infra/hpc-connect"
]

[project.scripts]
nvtest = "canary:console_main"
canary = "canary:console_main"

[project.optional-dependencies]
requests = ["requests"]
dev = ["ruff", "mypy", "pytest", "sphinx", "pydata-sphinx-theme", "sphinx_design", "coverage", "xmlschema"]
# backward compatible options that are now either required or builtin to hpc-connect
flux = []
slurm = []
pbs = []
psutil = []

[build-system]
requires = ["setuptools>=64", "setuptools-scm[toml]>=6.2.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "_canary.util.generate_version.__generate_dynamic_version__"}

[tool.mypy]
exclude = [
    "src/canary/examples/*",
    "src/_canary/third_party/distro.py",
    "src/_canary/third_party/programoutput/*",
    "src/_canary/third_party/monkeypatch.py",
    "src/_canary/third_party/cloudpickle.py",
    "src/_canary/third_party/docstring_parser/*",
    "src/_canary/third_party/imagesvg/*"
]

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "networkx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ruamel.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pygments.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "toml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "contextlib2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "contextlib2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyinstrument.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "numpy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "imageio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pkg_resources.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "psutil"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["_canary.third_party.*"]
ignore_errors = true

# check-wheel-contents is executed by the build-and-inspect-python-package action.
[tool.check-wheel-contents]
# W009: Wheel contains multiple toplevel library entries
ignore = "W009"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint]
ignore = ["E741", "F841", "E731"]
select = ["F", "I"]

[tool.ruff.lint.per-file-ignores]
"src/canary/__init__.py" = ["F401"]
"src/_canary/abc/__init__.py" = ["F401"]
"src/_canary/command/__init__.py" = ["F401"]
"src/_canary/third_party/*.py" = ["F401", "F403", "F405"]
"src/_canary/plugins/__init__.py" = ["F401", "F403", "F405"]
"src/_canary/plugins/*/__init__.py" = ["F401", "F403", "F405"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = "mock"
addopts = "-ra --durations=10"
cache_dir = ".cache/pytest"
python_files = "*.py"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.xml]
output = "coverage.xml"

[tool.coverage.run]
branch = true
omit = ["*/third_party/*"]
source = ["_canary"]
command_line = "-m pytest"

[tool.coverage.html]
directory = "html.cov"
