[metadata]
name = nvtest
description = nvtest: application testing with Python
long_description = file: README.md
long_description_content_type = text/x-md
author = Tim Fuller
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
keywords = test, unittest
project_urls =
    Source=https://sandia.gov/tfuller/nvtest
    Tracker=https://sandia.gov/tfuller/nvtest/issues

[options]
packages =
    _nvtest.command
    _nvtest.compat
    _nvtest.config
    _nvtest.directives
    _nvtest.plugins
    _nvtest.queue
    _nvtest.reporters
    _nvtest.runner
    _nvtest.test
    _nvtest.third_party
    _nvtest.util
    nvtest

py_modules = py
install_requires =
    packaging
python_requires = >=3.9
package_dir =
    =src
setup_requires =
    setuptools
    setuptools-scm>=6.0
zip_safe = no

[options.entry_points]
console_scripts =
    nvtest=nvtest:console_main
    nv.test=nvtest:console_main


[options.package_data]
_nvtest = py.typed
nvtest = py.typed

[build_sphinx]
source_dir = doc/en/
build_dir = doc/build
all_files = 1

[check-manifest]
ignore =
    src/_nvtest/_version.py

[devpi:upload]
formats = sdist.tgz,bdist_wheel

[mypy]
mypy_path = src
check_untyped_defs = True
disallow_any_generics = True
ignore_missing_imports = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
no_implicit_reexport = True
